--- a/projetologin/angular.json
+++ b/projetologin/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "a83a9ce1-c3f9-45e2-926d-224e088df24c"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
